--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,17 +5,30 @@
 ================================================================================
 */
 footer{
-	background: #000;
-	height: 50px; 
+	background: #141B41;
+	height: 100px; 
 	text-align:left;
 	width:100%;
 	min-width: $min-width;
 	order: 3;	
-    -webkit-order: 3;
-    background: red;
+	-webkit-order: 3;
 }
-
-
+.nav__link_footer{
+	color: #e9ecf5;
+	&:hover{
+		border-bottom-color: #E9ECF5;
+	}
+}
+.button_footer{
+	background: #141b41;
+	border-color: #72727e;
+	color: #f7f8fd;
+	&:hover{
+		background: #f7f8fd;
+		border-color: #141b41;
+		color: #141B41;
+	}
+}
 @media screen and (max-width: 767px) {
 
 }
