--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -28,7 +28,7 @@ body.no-scroll{
 .wrapper{
 	min-width: $min-width;
 	max-width: $max-width;
-	padding: 0 30px 0 30px;
+	padding: 0 3rem 0 3rem;
 	margin: 0 auto;
 	position: relative;
 }
@@ -36,13 +36,13 @@ body.no-scroll{
 /* titles */
 p{	
 	@include font($base-font-size,$base-line-height,$text-color);
-	padding: 15px 0 15px 0;
+	padding: 1.5rem 0 1.5rem 0;
 	font-weight: 300;	
 }
 h1{
 	@include font($font-size-h1,$line-height-h1,$title-color);
 	font-family: $title-font-family;
-	padding: 15px 0 15px 0;
+	padding: 1.5rem 0 1.5rem 0;
 	font-weight: 400;	
 }
 h2{
@@ -54,38 +54,14 @@ h2{
 h3{
 	@include font($font-size-h3,$line-height-h3,$title-color);
 	font-family: $title-font-family;
-	padding: 15px 0 15px 0;
+	padding: 1.5rem 0 1.5rem 0;
 	font-weight: 400;
 }
-h5{
-	font-size: 30px;
-	font-weight: 400;
-	line-height: 20px;
-}
-h6{
 
-}
-h4, h5, h6{
-	color: $text-color;
-}
 ul{
 	list-style-type: none;
 }
-// .content-link{
-// 	position: relative;
-// 	color: #c62727;
-// 	border-bottom: 1px solid #E6B8AF;
-// 	font-size: 18px;
-// 	font-weight: 400;
-// 	&:hover{
-// 		border-bottom-color: transparent;
-// 	}
-// }
-/* text position */
-.text-left{text-align: left!important}
-.text-center{text-align: center!important}
-.text-right{text-align: right!important}
-.nowrap{white-space: nowrap!important;}
+
 
 
 /* loader */
@@ -117,29 +93,35 @@ ul{
 }
 
 .top-screen{
-	padding: 116px 0 120px;
+	padding: 11.6rem 0 12rem;
 	width: 100%;
 	max-width: 550px;
+	&__info{
+		position: relative;
+		z-index: 2;
+	}
 	&__descr{
 		font-size: 2.4rem;
 		line-height: 1.4;
 		font-weight: 300;
 		color: #72727E;
-		padding: 8px 0 8px;
+		padding: 0.8rem 0 0.8rem;
 	}
 	&__decor{
+		width: 70rem;
 		position: absolute;
-		top: 28px;
+		top: 2.8rem;
 		right: -6.3%;
+		z-index: 1;
 	}
 	&__btn{
-		margin-top: 44px;
+		margin-top: 4.4rem;
 	}
 }
 .icon-arrow{
 	font-size: 2.4rem;
 	position: relative;
-	left: 4px;
+	left: 0.4rem;
 	line-height: 1;
 }
 
@@ -148,7 +130,7 @@ img{
 	width: 100%;
 }
 .start{
-	padding-top: 100px;
+	padding-top: 10rem;
 	position: relative;
 	display: flex;
 	flex-direction: row;
@@ -160,39 +142,39 @@ img{
 	}
 	&__img{
 		position: absolute;
-		left: -133px;
-		top: -100px;
-		width: 727px;
+		left: -13.3rem;
+		top: -10rem;
+		width: 72.7rem;
 	}
 	&__info{
 		position: relative;
 		z-index: 2;
-		left: 24px;
+		left: 2.4rem;
 	}
 }
 .info-list{
-	margin-top: 55px;
+	margin-top: 5.5rem;
 	&__item{
 		display: flex;
 		flex-direction: row;
 		justify-content: flex-start;
 		align-content: flex-start;
 		align-items: start;
-		margin-bottom: 52px;
-		margin-right: 30px;
+		margin-bottom: 5.2rem;
+		margin-right: 3rem;
 	}
 	&__icon{
-		width: 60px;
-		height: 60px;
+		width: 6rem;
+		height: 6rem;
 		border-radius: 6px;
 		background: #F7F8FD;
 		text-align: center;
-		font-size: 29px;
+		font-size: 2.9rem;
 		line-height: 1;
-		padding-top: 15px;
-		margin-right: 30px;
+		padding-top: 1.5rem;
+		margin-right: 3rem;
 		position: relative;
-		top: -3px;
+		top: -0.3rem;
 	}
 	&__title{
 		font-size: 2.4rem;
@@ -201,12 +183,12 @@ img{
 		color: #141B41;
 	}
 	&__text{
-		padding: 12px 0;
+		padding: 1.2rem 0;
 		white-space: nowrap;
 	}
 }
 .partners{
-	padding-top: 63px;
+	padding-top: 6.3rem;
 	&__title{
 		width: 100%;
 		text-align: center;
@@ -214,14 +196,14 @@ img{
 	&__text{
 		text-align: center;
 		width: 100%;
-		max-width: 840px;
+		max-width: 84rem;
 		margin: 0 auto;
 		padding: 0;
-		margin-top: 4px;
+		margin-top:0.4rem;
 		line-height: 1.36;
 	}
 	&__btn{
-		margin-top: 59px;
+		margin-top: 5.9rem;
 		width: 100%;
 		text-align: center;
 	}
@@ -232,19 +214,19 @@ img{
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: no-wrap;
-	margin-top: 40px;
+	margin-top: 4rem;
 }
 .info-list__item_2{
 	width: 20%;
-	padding: 42px 15px 16px 15px;
+	padding: 4.2rem 1.5rem 1.6rem 1.5rem;
 	text-align: center;
 	flex-direction: column;
 	align-items: center;
 	width: 25%;
-	max-width: 210px;
-	margin-right: 30px;
-	box-shadow: 0px 16px 20px rgba(20, 27, 65, 0.03);
-	border-radius: 10px;
+	max-width: 21rem;
+	margin-right: 3rem;
+	box-shadow: 0px 1.6rem 2rem rgba(20, 27, 65, 0.03);
+	border-radius: 1rem;
 	margin-bottom: 0;
 	&:last-child{
 		margin-right: 0;
@@ -258,22 +240,22 @@ img{
 	font-size: 1.6rem;
 	line-height: 1.4;
 	font-weight: 300;
-	padding: 22px 15px 15px 15px;
+	padding: 2.2rem 1.5rem 1.5rem 1.5rem;
 	color: #141b41;
 }
 .app{
-	margin-top: 179px;
+	margin-top: 17.9rem;
 	&__box{
 		background: #446DF6;
-		border-radius: 20px;
+		border-radius: 2rem;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		padding: 39px 59px 0 70px;
+		padding: 3.9rem 5.9rem 0 7rem;
 		position: relative;
 	}
 	&__info{
-		max-width: 364px;
+		max-width: 36.4rem;
 	}
 	&__title{
 		color: #f7f8fd;
@@ -292,15 +274,15 @@ img{
 		display: flex;
 		flex-direction: row;
 		align-content: space-between;
-		margin-top: 30px;
+		margin-top: 3rem;
 	}
 	&__link{
-		margin-right: 20px;
+		margin-right: 2rem;
 		display: block;
-		width: 162px;
-		height: 50px;
+		width: 16.2rem;
+		height: 5rem;
 		opacity: 1;
-		border-radius: 6px;
+		border-radius: 0.6rem;
 		overflow: hidden;
 		&:hover{
 			opacity: 0.8;
@@ -310,7 +292,7 @@ img{
 		}
 	}
 	&__decor{
-		margin-top: -107px;
+		margin-top: -10.7rem;
 	}
 }
 .reviews{
@@ -318,29 +300,29 @@ img{
 	margin-bottom: 13.4rem;
 }
 .slider{
-	margin-top: 7px;
+	margin-top: 0.7rem;
 	&__item{
 
 	}
 	&__text{
 		display: block;
 		width: 100%;
-		max-width: 710px;
+		max-width: 71rem;
 		line-height: 1.4;
 	}
 	&__human{
-		margin-top: 45px;
+		margin-top: 4.5rem;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
 		align-content: flex-start
 	}
 	&__human-photo{
-		width: 80px;
-		height: 80px;
+		width: 8rem;
+		height: 8rem;
 		overflow: hidden;
 		border-radius: 50%;	
-		margin-right: 30px;
+		margin-right: 3rem;
 		img{
 			border-radius: 50%;
 		}
@@ -350,9 +332,9 @@ img{
 		line-height: 1;
 		color: #141b41;
 		font-weight: 400;
-		padding: 5px 0;
+		padding: 0.5rem 0;
 		position: relative;
-		top: -2px;
+		top: -0.2rem;
 	}
 	&__human-position{
 		color: #72727e;
@@ -402,6 +384,34 @@ img{
 	z-index: 99;
 	left: 18px;
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 1200px){
+	html{
+		font-size: 9px;
+	}
+}
+@media screen and (max-width: 1070px){
+	.top-screen__decor{
+		width: 60rem;
+	}
+	.start__img{
+		left: -14rem;
+	}
+}
+@media screen and (max-width: 1020px){
+html{
+		font-size: 8px;
+	}
+}
+@media screen and (max-width: 950px){
+.nav{
+	padding-left: 0;
+}
+.nav__link{
+	margin-right: 20px;
+	&:last-child{
+	margin-right: 0;
+}
+}
+
 
 }
