--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?316hkm');
-  src:  url('fonts/icomoon.eot?316hkm#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?316hkm') format('truetype'),
-    url('fonts/icomoon.woff?316hkm') format('woff'),
-    url('fonts/icomoon.svg?316hkm#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?nmnoe1');
+  src:  url('fonts/icomoon.eot?nmnoe1#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?nmnoe1') format('truetype'),
+    url('fonts/icomoon.woff?nmnoe1') format('woff'),
+    url('fonts/icomoon.svg?nmnoe1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-check:before {
+  content: "\e90f";
+  color: #446df6;
+}
 .icon-document:before {
   content: "\e900";
   color: #446df6;
