--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -49,7 +49,6 @@ html {
 
 input,
 textarea {
-	color: #333;
 	font-family: $base-font-family;
 	outline: none;
 	border-radius: 0;
@@ -119,5 +118,53 @@ button {
 	visibility: hidden;
 }
 li {
-    list-style-type: none; 
-   }
+	list-style-type: none; 
+}
+::placeholder { 
+ color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;;
+}
+/* WebKit, Edge */
+::-webkit-input-placeholder {
+	color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;
+}
+
+/* Firefox 4-18 */
+:-moz-placeholder { 
+	color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;
+	opacity: 1;
+}
+
+/* Firefox 19+ */
+::-moz-placeholder { 
+	color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;
+	opacity: 1;
+}
+
+/* IE 10-11 */
+:-ms-input-placeholder { 
+	color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;
+}
+
+/* Edge */
+::-ms-input-placeholder { 
+	color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;
+}
+
+/* MODERN BROWSER */
+::placeholder { 
+	color: #C0C0C0;
+	font-size: 18px;
+	font-weight: 300;
+}
