--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -279,8 +279,8 @@ img{
 	&__link{
 		margin-right: 2rem;
 		display: block;
-		width: 16.2rem;
-		height: 5rem;
+		width: 162px;
+		height: 50px;
 		opacity: 1;
 		border-radius: 0.6rem;
 		overflow: hidden;
@@ -306,7 +306,7 @@ img{
 	}
 	&__text{
 		display: block;
-		width: 100%;
+		width: calc(100% - 130px);
 		max-width: 71rem;
 		line-height: 1.4;
 	}
@@ -318,8 +318,8 @@ img{
 		align-content: flex-start
 	}
 	&__human-photo{
-		width: 8rem;
-		height: 8rem;
+		width: 80px;
+		height: 80px;
 		overflow: hidden;
 		border-radius: 50%;	
 		margin-right: 3rem;
@@ -328,18 +328,18 @@ img{
 		}
 	}
 	&__human-name{
-		font-size: 2.4rem;
+		font-size: 24px;
 		line-height: 1;
 		color: #141b41;
 		font-weight: 400;
-		padding: 0.5rem 0;
+		padding: 5px 0;
 		position: relative;
-		top: -0.2rem;
+		top: -2px;
 	}
 	&__human-position{
 		color: #72727e;
 		line-height: 1;
-		font-size: 1.8rem;
+		font-size: 18px;
 		font-weight: 300;
 	}
 }
@@ -409,6 +409,11 @@ img{
 		transform: rotate(90deg);
 	}
 }
+.is-using-mouse{
+	.burger {
+		display: none;
+	}
+}
 .carousel__button svg{
 	width: 18px;
 	height: 18px;
@@ -476,7 +481,7 @@ img{
 	}
 }
 .list-check{
-	margin-bottom: 18px;
+
 	&__item{
 		margin-bottom: 18px;
 		&:last-child{
@@ -574,8 +579,45 @@ img{
 	.top-screen{
 		width: 50%;
 	}
+	.start__img{
+		left: -100px;
+	}
+	.app__info{
+		max-width: 100%;
+		width: 70%;
+	}
+	// .app__img{
+	// 	display: block;
+	// }
+	// .app__link{
+	// 	margin: 0 auto 15px auto;
+	// }
+	// .app__link:last-child{
+	// 	margin: 0 auto 0px auto;
+	// }
 }
+@media screen and (max-width: 920px){
+	.start__img{
+		left: -150px;
+	}
+	.info-list__item_2{
+		padding-left: 5px;
+		padding-right: 5px;
+		margin-right: 15px;
+	}
 
+	.app__decor{
+		margin-top: 0;
+	}
+}
+@media screen and (max-width: 860px){
+	.start__img{
+		left: -210px;
+	}
+	.app__box{
+		padding: 25px 20px 0 20px;
+	}
+}
 @media screen and (max-width: 767px){
 	.mob{
 		display: block;
@@ -588,9 +630,17 @@ img{
 		max-width: 100%;
 		padding: 0;
 	}
-	h1{
-		text-align: center;
+	.top-screen__info{
+		padding-top: 26px;
+		width: calc(100% + 20px);
+		margin-left: -10px;
+	}
+	h1, h2, h3{
 		font-size: 21px;
+		text-align: center;
+	}
+	p{
+		font-size: 14px;
 	}
 	.icon-arrow_down{
 		text-align: center;
@@ -604,7 +654,8 @@ img{
 		padding-top: 20px;
 	}
 	.top-screen__btn{
-		margin-top: 19px;
+		margin-top: 17px;
+		margin-bottom: 36px;
 	}
 	.top-screen__decor{
 		position: relative;
@@ -619,16 +670,318 @@ img{
 	}
 	.top-screen{
 		// background-image: url(../img/8-1.png);
-		
 	}
 	.top-screen__decor-tel{
 		position: relative;
-			z-index: 2;
+		z-index: 3;
 	}
 	.top-screen__decor-bubl{
 		position: absolute;
-				width: calc(100% + 40px);
-				bottom: 0;
-				left: -20px;
+		width: calc(100% + 40px);
+		bottom: 83px;
+		left: -37px;
+		z-index: 2;
 	}
+	.top-screen__decor{
+		position: relative;
+		&:before{
+			content: "";
+			position: absolute;
+			left: -20px;
+			bottom: 0;
+			background: linear-gradient(0deg, rgb(243,243,243), rgba(244,244,244,0));
+			width: calc(100% + 40px);
+			height: 100%;
+			z-index: 1;
+		}
+	}
+	.start{
+		padding-top: 52px;
+		flex-direction: column-reverse;
+		&__info{
+			left: 0;
+		}
+	}
+	.info-list{
+		padding-top: 0px;
+		margin-top: 32px;
+		&__item{
+			display: block;
+			text-align: center;
+			margin-right: 0;
+			margin-bottom: 18px;
+		}
+		&__icon{
+			margin: 0 auto;
+			width: 60px;
+			height: 60px;
+			padding-top: 15px;
+			.icon{
+				font-size: 30px;
+			}
+		}
+		&__info{
+			margin-top: 23px;
+		}
+		&__title{
+			font-size: 18px;		
+		}
+		&__text{
+			white-space: normal;
+			padding: 11px 0 13px;
+			font-size: 14px;
+		}
+	}
+	.start__decor{
+		width: 100%;
+		text-align: center;
+		margin-top: -58px;
+	}
+	.start__img{
+		position: relative;
+		left: 0;
+		top: 0;
+		width: 100%;
+		min-width: 606px;
+		margin: 0 auto;
+	}
+	.partners{
+		padding-top: 20px;
+		&__title{
+			line-height: 1.2;
+			padding-bottom: 20px;
+		}
+		&__text{
+			line-height: 1.33;
+		}
+	}
+	.br.mob{
+		display: block;
+		height: 22px;
+	}
+	.info-list_2{
+		display: block;
+		text-align: center;
+		margin-top: 20px;
+	}
+	.info-list__item_2{
+		padding-top: 29px;
+		margin: 0 auto;
+		width: 100%;
+		max-width: 300px;
+		margin-bottom: 10px;
+		height: 140px;
+	}
+	.info-list__info_2{
+		margin-top: 15px;
+	}
+	.info-list__text_2{
+		padding: 0;
+	}
+	.info-list__icon_2{
+		width: 60px;
+		height: 60px;
+	}
+	.info-list__item_2:last-child{
+		margin: 0 auto;
+	}
+	.partners__btn{
+		margin-top: 32px;
+	}
+	.app{
+		margin-top: 50px;
+		width: calc(100% + 40px);
+		margin-left: -20px;
+
+		&__box{
+			border-radius: 0;
+			display: block;
+			padding: 31px 15px 0px 15px;
+		}
+		&__img{
+			justify-content: space-around;
+		}
+		&__link{
+			margin-right: 0;
+		}
+		&__title{
+			font-size: 21px;
+			padding-bottom: 10px;
+		}
+		&__info{
+			width: 100%;
+		}
+		&__text{
+			text-align: center;
+		}
+	}
+	.app__decor{
+		
+		margin: 36px auto 0;
+		position: relative;
+		img{
+			width: 230px;
+			margin: 0 auto;
+			position: relative;
+			z-index: 2;
+		}
+		&:before{
+			content: "";
+			position: absolute;
+			left: -20px;
+			bottom: 0;
+			width: 100%;
+			background: linear-gradient(0, #4A64BA, rgba(68, 109, 246, 0));
+			width: calc(100% + 40px);
+			height: 100%;
+			z-index: 1;
+		}
+	}
+	.reviews{
+		margin-top: 55px;
+		margin-bottom: 0;
+		margin-bottom: 150px;
+	}
+	.reviews__title{
+		margin-bottom: 22px;
+	}
+	.slider__text{
+		width: 100%;
+		text-align: center;
+		max-width: 100%;
+	}
+	.slider__human{
+		display: block;
+		text-align: center;
+		margin-top: 12px;
+	}
+	.slider__human-photo{
+		margin: 0 auto;
+	}
+	.slider__human-name{
+		top: 0;
+		padding-top: 24px;
+		padding-bottom:8px;
+	}
+	.slick-button{
+		top: auto;
+		bottom: -100px;
+	}
+	.slick-button_next{
+		right: auto;
+		left: calc(50% + 21px);
+	}
+	.slick-button_prev{
+		right: auto;
+		left: calc(50% - 70px);
+	}
+	.window-open{
+		max-width:320px;
+		width: 320px;
+		padding: 63px 10px 39px 10px;
+	}
+	.fancybox__content>.carousel__button.is-close {
+		top: 12px;
+		right: 12px
+	}
+	.box-form {
+		margin-top: 37px;
+	}
+	::placeholder { 
+		font-size: 14px;
+	}
+	/* WebKit, Edge */
+	::-webkit-input-placeholder {
+		font-size: 14px;
+	}
+
+	/* Firefox 4-18 */
+	:-moz-placeholder { 
+		font-size: 14px;
+	}
+
+	/* Firefox 19+ */
+	::-moz-placeholder { 
+		font-size: 14px;
+	}
+
+	/* IE 10-11 */
+	:-ms-input-placeholder { 
+		font-size: 14px;
+	}
+
+	/* Edge */
+	::-ms-input-placeholder { 
+		font-size: 14px;
+	}
+
+	/* MODERN BROWSER */
+	::placeholder { 
+		font-size: 14px;
+	}
+	.box-field__input .form-control{
+		height: 58px;
+	}
+	.box-field__label{
+		height: 58px;
+		width: 58px;
+	}
+	.box-field__input {
+		width: calc(100% - 57px);
+	}
+	.box-field{
+		margin-bottom: 10px;
+	}
+	.list-check__text{
+		font-size: 13px;
+	}
+	.list-check__box{
+		position: relative;
+		top: 2px;
+	}
+	.list-check__item {
+    margin-bottom: 10px;
+}
+.box-form__btn{
+	margin-top: 39px;
+}
+.politic__text{
+	text-align: center;
+	line-height: 1.1;
+}
+.box-field__label .icon:before {
+    font-size: 15px;
+}
+.politic {
+    margin-top: 33px;
+}
+.fancybox__slide{
+	padding-left: 0;
+	padding-right: 0;
+}
+}
+@media screen and (max-width: 640px){
+	.start__img{
+		left: calc(50% - 306px);
+	}
+}
+@media screen and (max-width: 400px){
+	.app__title{
+		width: 192px;
+		margin: 0 auto;
+	}
+	.app__img{
+		display: block;
+		margin-top: 14px;
+	}
+	.app__link{
+		margin: 0 auto;
+	}
+	.app__link:last-child{
+		margin: 20px auto 0;
+	}
+
+}
+@media screen and (max-width: 320px){
+
 }
