--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -6,12 +6,15 @@
 */
 footer{
 	background: #141B41;
-	height: 10rem; 
+	height: 100px; 
 	text-align:left;
 	width:100%;
 	min-width: $min-width;
 	order: 3;	
 	-webkit-order: 3;
+}
+.header__box_footer{
+
 }
 .nav__link_footer{
 	color: #e9ecf5;
@@ -30,6 +33,33 @@ footer{
 	}
 }
 @media screen and (max-width: 767px) {
+	footer{
+		height: auto;
+		padding-top: 39px;
+		padding-bottom: 18px;
+	}
+.header__box_footer{
+	display: block;
+	padding-top: 0;
+	&:before{
+		content: none;
+	}
+}
+.logo_footer{
+	width: 120px;
+	margin: 0 auto;
+}
+.nav__link_footer{
+	font-size: 14px;
+	border-bottom: none;
+	padding: 10px 0;
+}
+.nav__link_footer:first-child {
+    padding-top: 27px;
+}
+.button_footer{
+	margin-top: 20px;
 
+}
 }
 
