--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -58,6 +58,9 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
     margin-right: 0;
 }
 }
+input.button{
+	padding-top: 0px;
+}
 .button{
 	display: inline-block;
 	border: 1px solid #E9ECF5;
