--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,19 +1,3 @@
-/* Gotham Pro */
-// @font-face {
-// 	font-family: 'GothamPro';
-// 	src: url('../fonts/GothamPro/GothamProBlack.eot');
-// 	src: url('../fonts/GothamPro/GothamProBlack.eot?#iefix') format('embedded-opentype'),
-// 	url('../fonts/GothamPro/GothamProBlack.woff') format('woff'),
-// 	url('../fonts/GothamPro/GothamProBlack.ttf') format('truetype'),
-// 	url('../fonts/GothamPro/GothamProBlack.svg#GothamProBlack') format('svg');
-// 	font-weight: 900;
-// 	font-style: normal;
-// 	font-stretch: normal;
-// 	unicode-range: U+0020-FFFD;
-// }
-
-/* Gotham Pro */
-
 
 @font-face {
 	font-family:'GT Eesti Pro Display';
@@ -26,6 +10,7 @@
 	font-style: normal;
 	font-stretch: normal;
 	unicode-range: U+0020-0527;
+  font-display: swap;
 }
 @font-face {
 	font-family:'GT Eesti Pro Display';
@@ -38,6 +23,7 @@
 	font-style: normal;
 	font-stretch: normal;
 	unicode-range: U+0020-0527;
+  font-display: swap;
 }
 @font-face {
 	font-family:'GT Eesti Pro Display';
@@ -50,6 +36,7 @@
 	font-style: normal;
 	font-stretch: normal;
 	unicode-range: U+0020-0527;
+  font-display: swap;
 }
 
 // icomoon
@@ -63,6 +50,7 @@
   font-weight: normal;
   font-style: normal;
   font-display: block;
+  font-display: swap;
 }
 
 [class^="icon-"], [class*=" icon-"] {
